<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/splash_title"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/splash_title_text_size"/>

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="@dimen/splash_logo_size"
        android:layout_height="@dimen/splash_logo_size"
        android:layout_gravity="center"
        android:gravity="center"
        android:contentDescription="@string/splash_logo_description"
        android:paddingLeft="@dimen/splash_logo_padding"
        android:paddingRight="@dimen/splash_logo_padding"
        android:src="@drawable/splash_logo"/>

    <TextView
        android:id="@+id/splash_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/splash_body"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/splash_body_text_size"/>

    <TextView
        android:id="@+id/splash_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"/>

</LinearLayout>