<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.q.pacemaker.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="80dp"
        android:paddingBottom="20dp">
        <ImageView
            android:id="@+id/login_user_photo"
            android:src="@drawable/default_user"
            android:layout_width="200dp"
            android:layout_height="200dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/login_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_login_default_name"
            android:textStyle="bold"
            android:inputType="textShortMessage"
            android:maxLength="6"
            android:maxLines="1"
            android:textSize="@dimen/text_extra_large"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"/>
        <TextView
            android:id="@+id/user_login_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_login_message"
            android:textSize="@dimen/text_regular"
            android:gravity="center"
            android:paddingTop="80dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">
            <Button
                android:id="@+id/login_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/user_login_cancel"/>
            <Button
                android:id="@+id/login_continue"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/user_login_continue"
                style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
